src/snapshots/parse_idb@cat.i64__file_regions.snap
---
source: src/test.rs
expression: file_regions
---
- start: 4194304
  end: 4238788
  eva: 0
- start: 6336016
  end: 6337300
  eva: 44560
