src/snapshots/parse_idb@cat.i64__ida_info.snap
---
hash: F1E0CFDFC573584F
source: src/test.rs
expression: ida_info
---
(
 version: 700,
 target: (
  processor: [
   109,
   101,
   116,
   97,
   112,
   99,
  ],
  assembler: 0,
 ),
 genflags: (163),
 lflags: (1031),
 database_change_count: 1208,
 input: (
  file_format: Elf,
  operating_system: 0,
  application_type: 0,
 ),
 special_segment_entry_size: 8,
 af: (3755999223, 3),
 addresses: (
  loading_base: 0,
  initial_ss: 18446744073709551615,
  initial_cs: 6,
  initial_ip: 4204034,
  initial_ea: (4204034),
  initial_sp: 18446744073709551615,
  main_ea: (18446744073709551615),
  min_ea: (4194304),
  max_ea: (6340384),
  original_min_ea: (4194304),
  original_max_ea: (6340384),
  privrange: (
   start: (18374686479671623680),
   end: (18374686479680012288),
  ),
  netdelta: 0,
 ),
 suspiciousness_limits: (
  low: Some((4194304)),
  high: Some((6340384)),
 ),
 xrefs: (
  max_depth: 16,
  max_displayed_xrefs: 0,
  max_displayed_type_xrefs: 2,
  max_displayed_strlit_xrefs: 1,
  xrefflag: (15),
 ),
 names: (
  max_autogenerated_name_length: 15,
  dummy_names: Ea,
 ),
 demangler: (
  short_form: 245612135,
  long_form: 104857607,
  name: (0),
 ),
 listname: (7),
 indent: 0,
 cmt_ident: 24,
 margin: 40,
 listing: (
  xref_margin: 80,
 ),
 outflag: (1876),
 cmtflg: (1),
 limiter: (0),
 bin_prefix_size: 0,
 prefflag: (1),
 strlits: (
  flags: (19),
  break_: 10,
  leading_zeroes: 0,
  name_prefix: [
   97,
  ],
  serial_number: 0,
 ),
 strtype: 0,
 data_carousel: 23,
 compiler: (
  is_guessed: false,
  compiler: Gnu,
  sizeof: (
   cm: Some(NN),
   int: 4,
   bool: 1,
   enum_: Some(4),
   short: Some(2),
   long: Some(8),
   longlong: Some(8),
   long_double: Some(16),
  ),
  alignment: None,
 ),
 abibits: (8),
 appcall_options: 0,
)