src/snapshots/parse_idb@cat.i64__input_file_sha256.snap
---
hash: 1CBD181711C88204
source: src/test.rs
expression: input_file_sha256
---
Some((53, 212, 171, 80, 176, 78, 115, 174, 192, 37, 248, 174, 98, 89, 118, 2, 102, 158, 187, 42, 146, 16, 119, 64, 209, 119, 23, 216, 147, 178, 54, 141))