src/snapshots/parse_idb@cat.i64__loader_name.snap
---
hash: 67DE28BC65ABE3E2
source: src/test.rs
expression: loader_name
---
Some([
 "elf64.dll",
 "ELF64 for x86-64 (Executable)",
])