src/snapshots/parse_idb@cat.i64__nam.snap
---
hash: 5C80ED1961D7A73B
source: src/test.rs
expression: nam
---
Some((
 names: [
  (4194872),
  (4194968),
  (4194972),
  (4194976),
  (4194980),
  (4194984),
  (4194992),
  (4195004),
  (4196929),
  (4196939),
  (4196946),
  (4196953),
  (4196966),
  (4196976),
  (4196984),
  (4196992),
  (4196999),
  (4197007),
  (4197016),
  (4197026),
  (4197032),
  (4197041),
  (4197058),
  (4197067),
  (4197075),
  (4197081),
  (4197087),
  (4197094),
  (4197118),
  (4197132),
  (4197141),
  (4197164),
  (4197178),
  (4197185),
  (4197192),
  (4197199),
  (4197206),
  (4197223),
  (4197228),
  (4197235),
  (4197247),
  (4197261),
  (4197268),
  (4197276),
  (4197282),
  (4197289),
  (4197296),
  (4197303),
  (4197311),
  (4197319),
  (4197331),
  (4197345),
  (4197352),
  (4197363),
  (4197370),
  (4197378),
  (4197384),
  (4197391),
  (4197403),
  (4197412),
  (4197419),
  (4197426),
  (4197438),
  (4197449),
  (4197456),
  (4197465),
  (4197471),
  (4197501),
  (4197508),
  (4197519),
  (4197533),
  (4197541),
  (4197556),
  (4197563),
  (4197581),
  (4197588),
  (4197595),
  (4197610),
  (4197615),
  (4197626),
  (4197642),
  (4197655),
  (4197670),
  (4197680),
  (4197692),
  (4197703),
  (4197713),
  (4199832),
  (4199888),
  (4199904),
  (4199920),
  (4199936),
  (4199952),
  (4199968),
  (4199984),
  (4200000),
  (4200016),
  (4200032),
  (4200048),
  (4200064),
  (4200080),
  (4200096),
  (4200112),
  (4200128),
  (4200144),
  (4200160),
  (4200176),
  (4200192),
  (4200208),
  (4200224),
  (4200240),
  (4200256),
  (4200272),
  (4200288),
  (4200304),
  (4200320),
  (4200336),
  (4200352),
  (4200368),
  (4200384),
  (4200400),
  (4200416),
  (4200432),
  (4200448),
  (4200464),
  (4200480),
  (4200496),
  (4200512),
  (4200528),
  (4200544),
  (4200560),
  (4200576),
  (4200592),
  (4200608),
  (4200624),
  (4200640),
  (4200656),
  (4200672),
  (4200688),
  (4200704),
  (4200720),
  (4200736),
  (4200752),
  (4200768),
  (4200784),
  (4200800),
  (4200816),
  (4200832),
  (4200848),
  (4200864),
  (4200880),
  (4200896),
  (4200912),
  (4200928),
  (4200944),
  (4200960),
  (4200976),
  (4200992),
  (4201008),
  (4201024),
  (4204034),
  (4205376),
  (4229360),
  (4229472),
  (4229516),
  (4229544),
  (4229584),
  (4229624),
  (4230024),
  (4230240),
  (4230288),
  (4230344),
  (4230400),
  (4230544),
  (4230584),
  (4230648),
  (4230720),
  (4230785),
  (4230808),
  (4230830),
  (4230854),
  (4230864),
  (4230868),
  (4230886),
  (4230905),
  (4230923),
  (4230943),
  (4230947),
  (4230958),
  (4230974),
  (4231004),
  (4231016),
  (4231038),
  (4231061),
  (4231082),
  (4231084),
  (4231098),
  (4231115),
  (4231125),
  (4231135),
  (4231144),
  (4231149),
  (4231168),
  (4231488),
  (4231493),
  (4231504),
  (4231560),
  (4231568),
  (4231572),
  (4231586),
  (4231609),
  (4231632),
  (4231650),
  (4231658),
  (4231664),
  (4232968),
  (4232992),
  (4233010),
  (4233022),
  (4233029),
  (4233033),
  (4233049),
  (4233072),
  (4233100),
  (4233128),
  (4233336),
  (4233368),
  (4233408),
  (4233448),
  (4233496),
  (4233544),
  (4233600),
  (4233760),
  (4233807),
  (4233824),
  (4233833),
  (4233839),
  (4233855),
  (4233920),
  (4233952),
  (6336504),
  (6337144),
  (6337164),
  (6337184),
  (6337312),
  (6337328),
  (6337344),
  (6337352),
  (6337360),
  (6337380),
  (6337752),
  (6339816),
  (6339824),
  (6339832),
  (6339840),
  (6339848),
  (6339856),
  (6339864),
  (6339872),
  (6339880),
  (6339888),
  (6339896),
  (6339904),
  (6339912),
  (6339920),
  (6339928),
  (6339936),
  (6339944),
  (6339952),
  (6339960),
  (6339968),
  (6339976),
  (6339984),
  (6339992),
  (6340000),
  (6340008),
  (6340016),
  (6340024),
  (6340032),
  (6340040),
  (6340048),
  (6340056),
  (6340064),
  (6340072),
  (6340080),
  (6340088),
  (6340096),
  (6340104),
  (6340112),
  (6340120),
  (6340128),
  (6340136),
  (6340144),
  (6340152),
  (6340160),
  (6340168),
  (6340176),
  (6340184),
  (6340192),
  (6340200),
  (6340208),
  (6340216),
  (6340224),
  (6340232),
  (6340240),
  (6340248),
  (6340256),
  (6340264),
  (6340272),
  (6340280),
  (6340288),
  (6340296),
  (6340304),
  (6340312),
  (6340320),
  (6340328),
  (6340336),
  (6340344),
  (6340352),
  (6340360),
  (6340368),
 ],
))